# python-pw-runner

./: .gitignore  CONTRIBUTING.md  FRONTEND.md  IMPLEMENTATION_SUMMARY.md  README.md  TRACE_FIX_SUMMARY.md  conftest.py  pyproject.toml  test_multiple.py  test_trace_creation.py
.github/workflows/: ci.yml
docs/: artifacts.md
frontend/: .gitignore  README.md  TESTING.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: app.spec.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: TestRuns.test.tsx  TestRuns.tsx  TestSelection.test.tsx  TestSelection.tsx
frontend/src/hooks/: useApi.test.tsx  useApi.ts
frontend/src/test/: mockData.ts  utils.tsx
frontend/src/types/: api.ts
src/pw_runner/: __init__.py  api.py  cli.py  discovery.py  fixtures.py  models.py  pytest_plugin.py  runner.py
tests/: test_api.py  test_discovery.py  test_models.py  test_runner.py
user_tests/: README.md
user_tests/saucedemo/: README.md  test_saucedemo.py
